# sparse-utils

./: .gitignore  CMakeLists.txt  README.md
cmake/: SPARSE_UTILSConfig.cmake.in  SparseUtilsConfig.cmake.in
examples/: CMakeLists.txt
examples/bsr/: CMakeLists.txt  bsr_to_dense.cpp
examples/cholesky/: CMakeLists.txt  cholesky.cpp
include/: README.md  connectivity_tools.h  defs.h  sparse_cholesky.h  sparse_matrix.h  sparse_numeric.h  sparse_symbolic.h  utils.h
include/detail/: sparse_cholesky_impl.h  sparse_matrix_impl.h  utils_impl.h
include/sparse_utils/: block_numeric.h  connectivity_tools.h  defs.h  lapack.h  lapack_helpers.h  matrix_utils.h  slice_numeric.h  sparse_cholesky.h  sparse_matrix.h  sparse_numeric.h  sparse_symbolic.h  sparse_utils.h
include/sparse_utils/detail/: matrix_utils_impl.h  sparse_cholesky_impl.h  sparse_matrix_impl.h
tests/: CMakeLists.txt  test_commons.h
tests/axpy/: CMakeLists.txt  test_axpy.cpp
tests/conversion/: CMakeLists.txt  test_bsr_to_csr_csc.cpp
tests/include/: test_commons.h
